# py-man-dont-be-upset

./: .gitignore  README.md  pyproject.toml
py_man_dont_be_upset/: main.py
py_man_dont_be_upset/gui/: main_window.py
py_man_dont_be_upset/gui/ui/: ui_main_window.py
py_man_dont_be_upset/gui/ui/static/: main_window.ui
