[tool.poetry]
name = "py-man-dont-be-upset"
version = "0.1.0"
description = ""
authors = ["PythBuster <pythbuster@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
pyside6 = "^6.7.2"
qasync = "^0.27.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
